tdf#132289 missing styles when inserting file with list

Warning: this does not work yet
Follow the instructions in the bug, inserting does not change
style for first line in document

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104085
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104319
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit 92c05bd1f8ef695a56718c4b54babbe757ab9b89)

Change-Id: I444997a6cc55cfe287f4c610f538f2f54803646c